# squid-core

./: .gitignore  README.md  __init__.py  bare-minimum.py  example.py  pyproject.toml  requirements.txt  reset.py  scanner.py
docs/: config.md  usage.md
misc/: README.md  test_redis.py
misc/example_bot/: __init__.py  main.py  run.sh
squid-core/: __init__.py
squidcore/: core.py  db.py  downreport.py  explorer.py  files.py  impersonate.py  legacy_db.py  log_setup.py  memory.py  perms.py  shell.py  status.py  uptime.py
src/example/: __init__.py  framework.toml
src/squid_core/: __init__.py  bot.py  config.py  config_types.py  framework.py  fw_settings.py  loader.py  logging.py  models.py  plugin.py  plugin_base.py
src/squid_core/components/: __init__.py  cli.py  db.py  events.py  perms.py  redis_comp.py  ui.py
src/squid_core/decorators/: __init__.py  base.py  cli_dec.py  discord_dec.py  event_dec.py  redis.py
src/squid_core/plugins/: __init__.py
src/squid_core/plugins/bot_events/: __init__.py  main.py  plugin.toml
src/squid_core/plugins/dms/: __init__.py  config.py  main.py  plugin.toml
src/squid_core/plugins/perms_cli/: __init__.py  main.py  plugin.toml
