[project]
name = "squid-core"
version = "0.1.0"
description = "A discord.py-based framework for building discord bots"
authors = [
    { name = "squid1127", email = "120748767+squid1127@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "discord.py",
    "aiohttp",
    "aioredis",
    "aiofiles",
    "pyyaml",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "coloredlogs",
    "tortoise-orm",
    "asyncpg",
    "databases[asyncpg]",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
